--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "grunt-contrib-sass": "~0.5.0",
     "grunt-contrib-connect": "~0.4.1",
     "grunt-zip": "~0.7.0",
-    "grunt": "~0.4.0"
+    "grunt": "~0.4.0",
+    "grunt-contrib-jade": "~0.8.0"
   },
   "licenses": [
     {
